2007-09-10 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/preferences.rb (open_url): Doesn't take the command as
    paramater anymore, call get_browser directly instead. Returns true if
    succedded. Uses Windows OLE on Windows in order to open url in default
    browser.
    * lib/fantasdic/ui/main_app.rb: Show the url in error dialog when
    cannot open browser.
    * lib/fantasdic/ui/about_dialog.rb: Likewise.

2007-09-08 Mathieu Blondel <mblondel@cvs.gnome.org>

    * release 1.0-beta4

2007-09-08 Mathieu Blondel <mblondel@cvs.gnome.org>

    * README: Updated for upcoming release.
    * NEWS: Likewise.

2007-09-08 Mathieu Blondel <mblondel@cvs.gnome.org>

    * win32/fantasdic.c: Move fantasdic/, GTK/, ruby/, ruby-gettext/, 
    ruby-gtk2/ and win32-pipe/ to a new dir lib/ in order to hide them from the
    user.
    * win32/README: Update instructions to follow this change.

2007-09-04 Mathieu Blondel <mblondel@cvs.gnome.org>

    * TODO: Updated with new ideas.

2007-09-02 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic.rb: intltool doesn't recognize _('...'). Use double quotes.

2007-09-02 Mathieu Blondel <mblondel@cvs.gnome.org>

    * fantasdic.desktop: Fantasdic should always be described as a "dictionary
    application". "DICT client" doesn't make sense for most people...
    * lib/fantasdic.rb: Likewise.

2007-09-01 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/preferences_dialog.rb: Use the hide method instead of
    destroy. It seems to workaround some GC-related bug in RG2.
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Likewise.

2007-09-01 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/preferences.rb: Handles the case when the config file is
    blank or malformed.

2007-08-31 Mathieu Blondel <mblondel@cvs.gnome.org>

    * THANKS: Added :).

2007-08-31 Mathieu Blondel <mblondel@cvs.gnome.org>

    * pre-setup.rb: Don't act differently on Windows.