@@ -1,3 +1,7 @@
+2007-09-14 Mathieu Blondel <mblondel@cvs.gnome.org>
+
+    * lib/fantasdic/ui/main_app.rb: Disable printing if no definition found.
+
 2007-09-10 Mathieu Blondel <mblondel@cvs.gnome.org>
 
     * lib/fantasdic/preferences.rb (open_url): Doesn't take the command as
